# connectFourQML

./: CMakeLists.txt
cmake/: SparkWithGit.cmake  spark-deb-package.descript
